# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyplunet"
version = "0.7.0"
description = "Client for the Plunet 3.0 SOAP API."
readme = "README.md"
authors = [{ name = "Henrik Kühnemann", email = "hello@yellownape.se" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["plunet", "api", "translation", "localization", "tms"]
dependencies = [
    "plunetapi>=0.3", "pydantic>=1.10"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]
retry = ["tenactity>=8.2.2"]

[project.urls]
Homepage = "https://github.com/kuhnemann/pyplunet"


[tool.bumpver]
current_version = "0.7.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]

"src/pyplunet/__init__.py" = ["{version}"]

